VM no longer prints "Picked up _JAVA_OPTIONS: " message

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b156
    • Verified

        When _JAVA_OPTIONS environment variable is set, JDK 8 used to print a warning:
         Picked up _JAVA_OPTIONS: XXXX

        JDK 9 no longer prints this message after JDK-8061999.

        Options from the environment variable are added to the VM arguments silently which makes troubleshooting very hard and it's hard for users to tell what options are automatically added.

              Assignee:
              Daniel Daugherty
              Reporter:
              Mandy Chung (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: