8173081: VM no longer prints "Picked up _JAVA_OPTONS: " message

Restore lost line from JDK-8061999.

Reviewed-by: hseigel, mchung, dholmes